# kale

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/kale-api/: Cargo.toml
crates/kale-api/src/: compiler.rs  lib.rs  parser.rs
crates/kale-codec/: Cargo.toml
crates/kale-codec/src/: decode.rs  encode.rs  error.rs  file.rs  lib.rs  tag.rs
crates/kale-codec/src/decode/: collections.rs  expr.rs  primitives.rs  program.rs  stmt.rs  tag.rs  types.rs
crates/kale-codec/src/encode/: collections.rs  expr.rs  primitives.rs  program.rs  stmt.rs  tag.rs  types.rs
crates/kale-interpreter/: Cargo.toml
crates/kale-interpreter/src/: error.rs  interpreter.rs  lib.rs  registry.rs  setup.rs
crates/kale-interpreter/src/interpreter/: call.rs  common.rs  expr.rs  flow.rs  runtime.rs  stmt.rs
crates/kale-lexer/: Cargo.toml
crates/kale-lexer/src/: error.rs  lexer.rs  lib.rs
crates/kale-lexer/src/lexer/: cursor.rs  scan.rs  token.rs
crates/kale-parser/: Cargo.toml
crates/kale-parser/src/: error.rs  lib.rs  parser.rs
crates/kale-parser/src/parser/: common.rs  cursor.rs  expr.rs  stmt.rs
crates/kale-report/: Cargo.toml
crates/kale-report/src/: diagnostic.rs  lib.rs  report.rs
crates/kale-runtime/: Cargo.toml
crates/kale-runtime/src/: args.rs  builtin.rs  ctx.rs  env.rs  error.rs  lib.rs  object.rs
crates/kale-runtime/src/object/: bool.rs  builtin.rs  closure.rs  (+14 more)
crates/kale-stdlib/: Cargo.toml
crates/kale-stdlib/src/: core.rs  globals.rs  io.rs  lib.rs  math.rs
crates/kale-syntax/: Cargo.toml
crates/kale-syntax/src/: ast.rs  lib.rs  span.rs  token.rs
(+19 files in other folders)
